updated image optimization

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         class="qr-img"
         src="images/image-qr-code.png"
         alt="a QR contained in square box"
+        loading="lazy"
       />
       <h1 class="qr-title">
         Improve your front-end skills by building projects
