--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <article class="qr-container">
+    <article class="qr-card">
       <img
-        class="qr-img"
+        class="qr-card__img"
         src="images/image-qr-code.png"
         alt="a QR contained in square box"
         loading="lazy"
       />
-      <h1 class="qr-title">
+      <h1 class="qr-card__title">
         Improve your front-end skills by building projects
       </h1>
-      <p class="qr-body">
+      <p class="qr-card__description">
         Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
